Fix menu on mobile

--- a/src/componets/Menu.scss
+++ b/src/componets/Menu.scss
@@ -24,6 +24,8 @@
   }
 
   svg {
+    width: 16px;
+    height: 16px;
     fill: white;
   }
 
